more text and visibilty fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 200 30% 20%;
-    --foreground: 0 0% 65%;
+    --foreground: 0 0% 90%;
 
     --card: 0 0% 50%;
     --card-foreground: 0 0% 100%;
@@ -19,8 +19,8 @@
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
 
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 50%;
+    --muted: 220 15% 60%;
+    --muted-foreground: 0 0% 90%;
 
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 100%;
